<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:animateLayoutChanges="true"
                                                   tools:context=".fragments.GameFragment">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNumberOne"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@id/btRefresh"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tvOperator"
            app:layout_constraintVertical_chainStyle="packed"
            android:textAlignment="center"
            android:fontFamily="@font/coustard"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNumberTwo"
            app:layout_constraintTop_toBottomOf="@+id/tvOperator"
            app:layout_constraintStart_toStartOf="@+id/tvOperator"
            app:layout_constraintEnd_toEndOf="@+id/tvOperator"
            android:textAlignment="center"
            android:fontFamily="@font/coustard"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvOperator"
            app:layout_constraintTop_toBottomOf="@+id/tvNumberOne"
            app:layout_constraintBottom_toTopOf="@+id/tvNumberTwo"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="@+id/tvNumberOne"
            app:layout_constraintEnd_toEndOf="@+id/tvNumberOne"
            android:textAlignment="center"
            android:fontFamily="@font/coustard"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:textSize="24sp"
            android:fontFamily="@font/baumans"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvCorrect"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/tvTotalCount"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btRefresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:rippleColor="@android:color/black"
            android:text="@string/skip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btNext"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:rippleColor="@android:color/black"
            android:text="@string/next"
            app:layout_constraintStart_toEndOf="@+id/btRefresh"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btRefresh"
            app:layout_constraintBottom_toBottomOf="@+id/btRefresh"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/tvNumberTwo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:hint="@string/answer"
            android:layout_marginTop="16dp"
            android:id="@+id/etAnswer">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:inputType="numberSigned"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCorrect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            android:fontFamily="@font/baumans"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTotalCount"
            app:layout_constraintStart_toEndOf="@+id/tvTitle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            android:fontFamily="@font/baumans"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>